--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "pexels": "^1.0.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1"
@@ -32,6 +33,7 @@
     ]
   },
   "devDependencies": {
+    "axios": "^0.19.2",
     "firebase": "^7.15.4",
     "puppeteer": "^4.0.1",
     "sass": "^1.26.9"
