--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "pexels": "^1.0.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-firebase-hooks": "^2.2.0",
+    "react-scripts": "3.4.1",
+    "firebase": "^7.20.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -37,7 +39,7 @@
   },
   "devDependencies": {
     "axios": "^0.19.2",
-    "firebase": "^7.15.4",
+    "firebase": "^7.23.0",
     "puppeteer": "^4.0.1",
     "sass": "^1.26.9"
   }
