--- a/package.json
+++ b/package.json
@@ -7,14 +7,19 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "bootstrap": "^4.5.3",
+    "firebase": "^7.20.0",
+    "mathjs": "^8.0.1",
+    "node-fetch": "^2.6.1",
     "node-sass": "^4.14.1",
     "nodeenv": "^3.0.9",
     "pexels": "^1.0.1",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.4.0",
     "react-dom": "^16.13.1",
     "react-firebase-hooks": "^2.2.0",
-    "react-scripts": "3.4.1",
-    "firebase": "^7.20.0"
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "3.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
